--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
     "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
