--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.0.11",
     "@nestjs/websockets": "^9.0.11",
+    "@prisma/client": "^4.3.1",
     "core-js": "^3.6.5",
     "next": "12.2.3",
     "react": "18.2.0",
@@ -62,6 +63,7 @@
     "jest": "27.5.1",
     "nx": "14.5.8",
     "prettier": "^2.6.2",
+    "prisma": "^4.3.1",
     "react-test-renderer": "18.2.0",
     "ts-jest": "27.1.4",
     "ts-node": "10.9.1",
