--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@nestjs/websockets": "^9.0.11",
     "@prisma/client": "^4.3.1",
     "core-js": "^3.6.5",
+    "jwt-decode": "^3.1.2",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.3.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
