--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "^1.1.0",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.0.11",
     "@nestjs/websockets": "^9.0.11",
     "@prisma/client": "^4.3.1",
     "@tanstack/react-query": "^4.3.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
     "jwt-decode": "^3.1.2",
+    "mongoose": "^6.6.3",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
