--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.3.5",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -24,12 +27,14 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
+    "framer-motion": "^7.5.3",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.6.3",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.3.0",
+    "react-router-dom": "6.4.1",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
@@ -49,7 +54,7 @@
     "@nrwl/next": "^14.5.8",
     "@nrwl/node": "14.5.8",
     "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "14.5.8",
+    "@nrwl/react": "^14.8.3",
     "@nrwl/web": "14.5.8",
     "@nrwl/workspace": "14.5.8",
     "@testing-library/react": "13.3.0",
@@ -57,6 +62,7 @@
     "@types/node": "16.11.7",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "27.5.1",
@@ -70,6 +76,7 @@
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "27.5.1",
+    "jest-environment-jsdom": "28.1.1",
     "nx": "14.5.8",
     "prettier": "^2.6.2",
     "prisma": "^4.3.1",
