--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/websockets": "^9.0.11",
     "@prisma/client": "^4.3.1",
     "@tanstack/react-query": "^4.3.1",
+    "argon2": "^0.29.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
