--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.3.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.2",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
