--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
+    "dayjs": "^1.11.6",
     "framer-motion": "^7.5.3",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.6.3",
