--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "rxjs": "^7.0.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.1",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "use-chat-scroll": "^1.0.3"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
