--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "postinstall": "remix setup node"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +24,9 @@
     "@nestjs/platform-socket.io": "^9.0.11",
     "@nestjs/websockets": "^9.1.6",
     "@prisma/client": "^4.3.1",
+    "@remix-run/node": "^1.8.8",
+    "@remix-run/react": "^1.8.8",
+    "@remix-run/serve": "^1.8.8",
     "@tanstack/react-query": "^4.3.1",
     "argon2": "^0.29.1",
     "class-transformer": "^0.5.1",
@@ -59,8 +63,11 @@
     "@nrwl/node": "14.5.8",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "^14.8.3",
+    "@nrwl/remix": "^14.7.0",
     "@nrwl/web": "14.5.8",
     "@nrwl/workspace": "14.5.8",
+    "@remix-run/dev": "^1.8.8",
+    "@remix-run/eslint-config": "^1.8.8",
     "@testing-library/react": "13.3.0",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
@@ -69,7 +76,9 @@
     "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "autoprefixer": "^10.4.13",
     "babel-jest": "27.5.1",
+    "concurrently": "^7.6.0",
     "cypress": "^10.2.0",
     "eslint": "~8.15.0",
     "eslint-config-next": "12.2.3",
@@ -82,9 +91,11 @@
     "jest": "27.5.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "14.5.8",
+    "postcss": "^8.4.19",
     "prettier": "^2.6.2",
     "prisma": "^4.3.1",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.2.4",
     "ts-jest": "27.1.4",
     "ts-node": "10.9.1",
     "typescript": "~4.7.2"
