--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test",
-    "postinstall": "remix setup node"
+    "test": "nx test"
   },
   "private": true,
   "dependencies": {
@@ -24,9 +23,6 @@
     "@nestjs/platform-socket.io": "^9.0.11",
     "@nestjs/websockets": "^9.1.6",
     "@prisma/client": "^4.3.1",
-    "@remix-run/node": "^1.8.8",
-    "@remix-run/react": "^1.8.8",
-    "@remix-run/serve": "^1.8.8",
     "@tanstack/react-query": "^4.3.1",
     "argon2": "^0.29.1",
     "class-transformer": "^0.5.1",
@@ -63,11 +59,8 @@
     "@nrwl/node": "14.5.8",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "^14.8.3",
-    "@nrwl/remix": "^14.7.0",
     "@nrwl/web": "14.5.8",
     "@nrwl/workspace": "14.5.8",
-    "@remix-run/dev": "^1.8.8",
-    "@remix-run/eslint-config": "^1.8.8",
     "@testing-library/react": "13.3.0",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
