feat: install again kousa project with chakraui

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.3.5",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@chakra-ui/react": "^2.4.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/poppins": "^4.5.10",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -29,7 +30,7 @@
     "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.6",
-    "framer-motion": "^7.5.3",
+    "framer-motion": "^7.6.18",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.6.3",
     "next": "12.2.4",
@@ -71,7 +72,6 @@
     "@typescript-eslint/parser": "^5.29.0",
     "autoprefixer": "^10.4.13",
     "babel-jest": "27.5.1",
-    "concurrently": "^7.6.0",
     "cypress": "^10.2.0",
     "eslint": "~8.15.0",
     "eslint-config-next": "12.2.3",
@@ -84,11 +84,9 @@
     "jest": "27.5.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "14.5.8",
-    "postcss": "^8.4.19",
     "prettier": "^2.6.2",
     "prisma": "^4.3.1",
     "react-test-renderer": "18.2.0",
-    "tailwindcss": "^3.2.4",
     "ts-jest": "27.1.4",
     "ts-node": "10.9.1",
     "typescript": "~4.7.2"
