--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@nrwl/node": "14.5.8",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "^14.8.3",
+    "@nrwl/vite": "^15.3.0",
     "@nrwl/web": "14.5.8",
     "@nrwl/workspace": "14.5.8",
     "@testing-library/react": "13.3.0",
