--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/platform-socket.io": "^9.0.11",
     "@nestjs/websockets": "^9.1.6",
     "@prisma/client": "^4.3.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.3.1",
     "argon2": "^0.29.1",
     "class-transformer": "^0.5.1",
@@ -38,6 +39,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
