--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "^4.8.1",
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.3.1",
+    "@vitejs/plugin-react": "^3.0.1",
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -51,7 +52,9 @@
     "socket.io-client": "^4.5.1",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.11",
-    "use-chat-scroll": "^1.0.3"
+    "use-chat-scroll": "^1.0.3",
+    "vite": "^4.0.4",
+    "vite-tsconfig-paths": "^4.0.5"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
