--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@nrwl/nest": "^14.5.8",
     "@nrwl/next": "^14.5.8",
     "@nrwl/node": "14.5.8",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-cloud": "^15.0.3",
     "@nrwl/react": "^14.8.3",
     "@nrwl/vite": "^15.3.0",
     "@nrwl/web": "14.5.8",
