bug: with kaffe

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "format": "prettier --write .",
     "lint": "eslint --fix . --ext .js,.jsx,.ts,.tsx",
     "serve:web": "cd apps/kaffe && yarn dev",
-    "serve:api": "cd apps/breaded && yarn start:dev"
+    "serve:api": "cd apps/breaded && yarn start:dev",
+    "build:web": "cd apps/kaffe && yarn build"
   },
   "devDependencies": {
     "react": "18.2.0",
