--- a/apps/kaffe/package.json
+++ b/apps/kaffe/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.0.1",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@next/font": "13.2.1",
-    "@types/node": "18.14.1",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
+    "@types/node": "17.0.21",
+    "@types/react": "17.0.21",
+    "@types/react-dom": "17.0.19",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
-    "next": "13.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "framer-motion": "^10.0.0",
+    "next": "12.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "typescript": "4.9.5"
   }
 }
