--- a/apps/kaffe/tsconfig.json
+++ b/apps/kaffe/tsconfig.json
@@ -5,6 +5,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "baseUrl": "./src",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -22,7 +23,8 @@
         "name": "next"
       }
     ],
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "target": "es5"
   },
   "include": [
     "next-env.d.ts",
