--- a/apps/kaffe/package.json
+++ b/apps/kaffe/package.json
@@ -1,28 +1,34 @@
 {
   "name": "kaffe",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/next-js": "^2.0.1",
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@next/font": "13.2.1",
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.21",
-    "@types/react-dom": "17.0.19",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.2.1",
+    "@fontsource/poppins": "^4.5.10",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@tanstack/react-query": "^4.24.10",
     "framer-motion": "^10.0.0",
-    "next": "12.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "typescript": "4.9.5"
+    "jwt-decode": "^3.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "6"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^3.1.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.1.0"
   }
 }
