--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="mongodb+srv://admin:Ecej0OKBp3kxjWXs@suvap-cluster.wvbcugd.mongodb.net/suvapdatabase?retryWrites=true&w=majority"
+SECRET_KEY="aGFyZCF0by1ndWVzc19zZWNyZXQ"
