--- a/.env
+++ b/.env
@@ -1,8 +1,2 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="mongodb+srv://admin:Ecej0OKBp3kxjWXs@suvap-cluster.wvbcugd.mongodb.net/suvapdatabase?retryWrites=true&w=majority"
-SECRET_KEY="aGFyZCF0by1ndWVzc19zZWNyZXQ"
+MONGO_HOST="mongodb+srv://doadmin:73hq6P5SKwxi9108@breaded-cluster-f6d46404.mongo.ondigitalocean.com/admin?tls=true&authSource=admin&replicaSet=breaded-cluster"
+MONGO_DATABASE="admin"
