feat: crud api user

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-MONGO_HOST="mongodb+srv://doadmin:73hq6P5SKwxi9108@breaded-cluster-f6d46404.mongo.ondigitalocean.com/admin?tls=true&authSource=admin&replicaSet=breaded-cluster"
-MONGO_DATABASE="admin"
+MONGO_HOST=mongodb+srv://suramarketplace:chz6s900LS0m1FzZ@breaded-cluster.jztgmnk.mongodb.net/breaded?retryWrites=true&w=majority
+MONGO_DATABASE=breaded
+MONGO_USERNAME=suramarketplace
+MONGO_PASSWORD=chz6s900LS0m1FzZ
+
+AUTH_SECRET_KEY=L22yFr%G01S^gq07i1^TOyxEYyMu!^V8ep!QVC^@
+AUTH_EXPIRES_IN=72h
