--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dayjs": "^1.11.7",
     "mongodb": "^5.3.0",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
