--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typeorm-nestjs",
+  "name": "breaded",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -11,7 +11,6 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -19,31 +18,29 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "migrations:generate": "typeorm -- migration:generate -n",
-    "migrations:run": "typeorm -- migration:run",
-    "migrations:drop": "typeorm -- schema:drop",
-    "migrations:show": "typeorm -- migration:show"
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.7.1",
+    "@nestjs/apollo": "^11.0.5",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^11.0.5",
     "@nestjs/jwt": "^10.0.3",
-    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "apollo-server-express": "^3.12.0",
     "argon2": "^0.30.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "dayjs": "^1.11.7",
-    "mongodb": "^5.3.0",
-    "pg": "^8.10.0",
+    "graphql": "^16.6.0",
+    "graphql-tools": "^8.3.20",
+    "mongodb": "^5.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.15"
+    "typeorm": "^0.3.16"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
