--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@my-workspace/source",
+  "name": "@sura/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
@@ -8,6 +8,7 @@
     "@nestjs/common": "^9.1.1",
     "@nestjs/core": "^9.1.1",
     "@nestjs/platform-express": "^9.1.1",
+    "@prisma/client": "^4.15.0",
     "axios": "^1.0.0",
     "next": "13.4.1",
     "react": "18.2.0",
@@ -53,6 +54,7 @@
     "nx": "16.3.2",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
+    "prisma": "^4.15.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.0.2"
