--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@nestjs/common": "^9.1.1",
     "@nestjs/core": "^9.1.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.1.1",
     "@prisma/client": "^4.15.0",
     "axios": "^1.0.0",
