--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@chakra-ui/next-js": "^2.1.4",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@nestjs/common": "^9.1.1",
     "@nestjs/core": "^9.1.1",
     "@nestjs/jwt": "^10.1.0",
@@ -13,6 +17,7 @@
     "@prisma/client": "^4.15.0",
     "argon2": "^0.30.3",
     "axios": "^1.0.0",
+    "framer-motion": "^10.12.16",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
