--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@sura/chakra": ["libs/chakra/src/index.ts"],
       "@sura/prisma": ["libs/prisma/src/index.ts"],
       "@sura/prisma.service.ts": ["libs/prisma.service.ts/src/index.ts"]
     }
