--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.1.1",
+    "@next/font": "^13.4.6",
     "@prisma/client": "^4.15.0",
     "argon2": "^0.30.3",
     "axios": "^1.0.0",
