--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nestjs/platform-express": "^9.1.1",
     "@next/font": "^13.4.6",
     "@prisma/client": "^4.15.0",
+    "@swc/helpers": "~0.5.0",
     "argon2": "^0.30.3",
     "axios": "^1.0.0",
     "framer-motion": "^10.12.16",
@@ -40,6 +41,9 @@
     "@nx/react": "16.3.2",
     "@nx/webpack": "16.3.2",
     "@nx/workspace": "16.3.2",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.51",
+    "@swc/jest": "0.2.20",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
