--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,9 @@
     "paths": {
       "@sura/chakra": ["libs/chakra/src/index.ts"],
       "@sura/prisma": ["libs/prisma/src/index.ts"],
-      "@sura/prisma.service.ts": ["libs/prisma.service.ts/src/index.ts"]
+      "@sura/prisma.service.ts": ["libs/prisma.service.ts/src/index.ts"],
+      "@sura/ui": ["libs/ui/src/index.ts"],
+      "@sura/ui/server": ["libs/ui/src/server.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
