--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "@swc/helpers": "~0.5.0",
     "argon2": "^0.30.3",
     "axios": "^1.0.0",
+    "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.1.0",
