--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@next/font": "^13.4.6",
     "@prisma/client": "^4.15.0",
     "@swc/helpers": "~0.5.0",
+    "@tanstack/react-query": "^4.29.15",
     "argon2": "^0.30.3",
-    "axios": "^1.0.0",
+    "axios": "^1.4.0",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
     "next": "13.4.1",
