--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,9 +15,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@sura/axios": ["libs/axios/src/index.ts"],
       "@sura/chakra": ["libs/chakra/src/index.ts"],
       "@sura/prisma": ["libs/prisma/src/index.ts"],
       "@sura/prisma.service.ts": ["libs/prisma.service.ts/src/index.ts"],
+      "@sura/services": ["libs/services/src/index.ts"],
       "@sura/ui": ["libs/ui/src/index.ts"],
       "@sura/ui/server": ["libs/ui/src/server.ts"]
     }
