--- a/package.json
+++ b/package.json
@@ -38,14 +38,19 @@
     "@nx/cypress": "16.3.2",
     "@nx/eslint-plugin": "16.3.2",
     "@nx/jest": "16.3.2",
-    "@nx/js": "16.3.2",
+    "@nx/js": "16.4.1",
     "@nx/linter": "16.3.2",
     "@nx/nest": "16.3.2",
     "@nx/next": "^16.3.2",
     "@nx/node": "16.3.2",
     "@nx/react": "16.3.2",
+    "@nx/storybook": "^16.4.1",
     "@nx/webpack": "16.3.2",
     "@nx/workspace": "16.3.2",
+    "@storybook/addon-essentials": "^7.0.24",
+    "@storybook/core-common": "^7.0.24",
+    "@storybook/core-server": "^7.0.24",
+    "@storybook/nextjs": "^7.0.24",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@swc/jest": "0.2.20",
