feat: create web app with vite and tailwindcss

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@app/component": ["apps/app/components/index.ts"],
       "@sura/axios": ["libs/axios/src/index.ts"],
       "@sura/chakra": ["libs/chakra/src/index.ts"],
       "@sura/interfaces": ["libs/interfaces/src/index.ts"],
@@ -22,8 +23,7 @@
       "@sura/prisma.service.ts": ["libs/prisma.service.ts/src/index.ts"],
       "@sura/services": ["libs/services/src/index.ts"],
       "@sura/ui": ["libs/ui/src/index.ts"],
-      "@sura/ui/server": ["libs/ui/src/server.ts"],
-      "@app/component": ["apps/app/components/index.ts"]
+      "@sura/ui/server": ["libs/ui/src/server.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
