--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
     "@nx/cypress": "16.3.2",
     "@nx/eslint-plugin": "16.3.2",
     "@nx/jest": "16.3.2",
-    "@nx/js": "16.4.1",
+    "@nx/js": "16.4.3",
     "@nx/linter": "16.3.2",
     "@nx/nest": "16.3.2",
     "@nx/next": "^16.3.2",
     "@nx/node": "16.3.2",
     "@nx/react": "16.3.2",
     "@nx/storybook": "^16.4.1",
+    "@nx/vite": "^16.4.3",
     "@nx/webpack": "16.3.2",
     "@nx/workspace": "16.3.2",
     "@storybook/addon-essentials": "^7.0.24",
@@ -63,6 +64,10 @@
     "@types/react-lazy-load-image-component": "^1.5.3",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/coverage-c8": "^0.32.0",
+    "@vitest/ui": "^0.32.0",
+    "autoprefixer": "^10.4.14",
     "babel-jest": "^29.4.1",
     "cypress": "^12.11.0",
     "eslint": "~8.15.0",
@@ -76,12 +81,18 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "jsdom": "~22.1.0",
     "nx": "16.3.2",
     "nx-cloud": "latest",
+    "postcss": "^8.4.24",
     "prettier": "^2.6.2",
     "prisma": "^4.15.0",
+    "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.0.2"
+    "typescript": "~5.0.2",
+    "vite": "^4.3.9",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.32.0"
   }
 }
