--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^4.29.15",
     "argon2": "^0.30.3",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.16",
     "next": "13.4.1",
@@ -92,6 +93,7 @@
     "ts-node": "10.9.1",
     "typescript": "~5.0.2",
     "vite": "^4.3.9",
+    "vite-plugin-dts": "~2.3.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.32.0"
   }
